src/objects/Trip__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Trip</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Trip Names</label>
    </listViews>
    <listViews>
        <fullName>Trips</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>Trips</label>
    </listViews>
    <nameField>
        <label>Trip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>